UF-14934: Changes after review feedback
